# TDT-Builder-Tool

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  update_ansi_descriptions.py  update_ansi_uppercase_distinct.py
.memory/: architecture.md  components.md  conventions.md  decisions.md  index.md  known-bugs.md  patterns.md  performance.md
bench/: AGENTS.md  benchmark.py  casos_travados.csv  diag_ancora_revisao.py  diag_colunas.py  diag_cva.py  diag_direcao_comando.py  diag_enderecos.py  diag_filho_vs_pai.py  diag_gap_revisao.py  diag_manut_lp.py  diag_measurement_type.py  diag_outputs_sem_par.py  diag_pendentes_homogeneo.py  diag_spg_decisor.py  diag_spg_dja1_populacao.py  diag_type_severidade.py  exp_bm25_full.py  exp_pesos.py  gate_tdt_real.py  minerar_lp_conhecimento.py  regressao.py  reprocessar_lista1.py  rotulos.py  rotulos_v1_curado.py  scan_ruido_enderecos.py  tune_pesos.py
docs/: 2026-06-24-sp4-ui-resumo.md  2026-06-24-sp4-ui-tdt-corrigir-output-resumo.md  AGENTS.md  Export_base_Full_limpo.json  GTD - Lista de Pontos V11.xlsx  Lista de Pontos FredW V13 - DNP3.xlsx  ObservacoesProgramaTDT.txt  Pontos Padrao ADMS_v1.xlsx  Pontos Padrao ADMS_v2.xlsx  Pontos Padrao ADMS_v3.xlsx  Pontos Padrao ADMS_v4.xlsx  Pontos Padrao ADMS_v5.xlsx  Pontos Padrao ADMS_v6.xlsx  Pontos Padrao ADMS_v7.xlsx  Pontos Padrao ADMS_v8.xlsx  SAN2_LISTA_PADRONIZADA_PARA_TESTE.xlsx  anot.txt  conhecimento_sinais.md  decision_analysis.md  dnp3_template.xlsx  fluxo_dados.md  ideias-melhorias-analise.md  iec104_template.xlsx  input_homogeneo.xlsx  observacoes26062026.md  (+10 more)
(+338 files in other folders)
